styles.css
#checkList {
    list-style: none;
    margin-left: 0;
    padding-left: 1em;
}
li {
    color: black;
}
li:nth-child(odd) {
    background-color: white;
}
li:nth-child(even) {
    background-color: grey;
}

#createTask {
    margin: 0%;
}

button {
    margin-right: 5px;
}

